samples/_failures_safe/1761040552_acf335_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15cdc1dd.c: In function ‘main’:
./samples/SAFE/__tmp_15cdc1dd.c:169:18: error: ‘MAX_TOK’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  169 |     Token tokens[MAX_TOK
      |                  ^~~~~~~
      |                  MAX_TOKENS
./samples/SAFE/__tmp_15cdc1dd.c:169:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_15cdc1dd.c:169:25: error: expected ‘]’ at end of input
  169 |     Token tokens[MAX_TOK
      |                         ^
      |                         ]
./samples/SAFE/__tmp_15cdc1dd.c:169:5: error: expected declaration or statement at end of input
  169 |     Token tokens[MAX_TOK
      |     ^~~~~
